@@ -7,7 +7,7 @@ import mezz.jei.api.registration.IGuiHandlerRegistration;
 import mezz.jei.api.registration.IModIngredientRegistration;
 import mezz.jei.api.registration.IVanillaCategoryExtensionRegistration;
 import net.minecraft.client.renderer.Rect2i;
-import net.minecraft.resources.ResourceLocation;
+import net.minecraft.resources.Identifier;
 import slimeknights.mantle.Mantle;
 import slimeknights.mantle.client.screen.MultiModuleScreen;
 import slimeknights.mantle.inventory.MultiModuleContainerMenu;
@@ -15,24 +15,23 @@ import slimeknights.mantle.plugin.jei.entity.EntityIngredientHelper;
 import slimeknights.mantle.plugin.jei.entity.EntityIngredientRenderer;
 import slimeknights.mantle.recipe.crafting.ShapedRetexturedRecipe;
 
-import java.util.Collections;
 import java.util.List;
 
 @JeiPlugin
 public class JEIPlugin implements IModPlugin {
   @Override
-  public ResourceLocation getPluginUid() {
+  public Identifier getPluginUid() {
     return Mantle.getResource("jei");
   }
 
   @Override
   public void registerIngredients(IModIngredientRegistration registration) {
-    registration.register(MantleJEIConstants.ENTITY_TYPE, Collections.emptyList(), new EntityIngredientHelper(), new EntityIngredientRenderer(16));
+    registration.register(MantleJEIConstants.ENTITY_TYPE, List.of(), new EntityIngredientHelper(), new EntityIngredientRenderer(16), slimeknights.mantle.recipe.ingredient.EntityIngredient.EntityInput.CODEC);
   }
 
   @Override
   public void registerVanillaCategoryExtensions(IVanillaCategoryExtensionRegistration registry) {
-    registry.getCraftingCategory().addCategoryExtension(ShapedRetexturedRecipe.class, RetexturableRecipeExtension::new);
+    registry.getCraftingCategory().addExtension(ShapedRetexturedRecipe.class, new RetexturableRecipeExtension());
   }
 
   @SuppressWarnings({"unchecked", "rawtypes"})
